--- a/.github/workflows/update-iptv.yml
+++ b/.github/workflows/update-iptv.yml
@@ -12,6 +12,10 @@ on:
       - 'config/**'
       - '.github/workflows/**'
 
+permissions:
+  contents: write
+  actions: read
+
 jobs:
   update:
     runs-on: ubuntu-latest
@@ -21,7 +25,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.11'
         
@@ -55,7 +59,7 @@ jobs:
         git push
         
     - name: Upload results as artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: onetv-api-results
         path: |
