优化工作流调度和修复GitHub Actions版本问题
⏰ 调度优化：
- 直播源更新频率从每日调整为每周五北京时间6点
- 点播源保持每周日北京时间24点更新
- 避免过于频繁的更新，节约GitHub Actions资源
- 时间分散安排，避免工作流冲突

🔧 技术修复：
- 修复VOD工作流中已弃用的actions/upload-artifact@v3
- 升级到actions/upload-artifact@v4和actions/setup-python@v5
- 解决GitHub Actions弃用警告问题

📝 文档同步：
- 更新README.md中所有相关的更新时间说明
- 更新CHANGELOG.md中的更新策略描述
- 确保文档与实际工作流配置保持一致

新的更新调度安排：
- 📺 直播源：每周五北京时间6:00（22个精选订阅源）
- 🎬 点播源：每周日北京时间24:00（32个优质点播源）
- 🔄 合理的更新频率，既保证内容时效性又节约资源

--- a/.github/workflows/update-iptv.yml
+++ b/.github/workflows/update-iptv.yml
@@ -2,8 +2,8 @@ name: Update OneTV-API
 
 on:
   schedule:
-    # 每天北京时间 6:00 运行 (UTC时间 22:00)
-    - cron: '0 22 * * *'
+    # 每周五北京时间 6:00 运行 (UTC时间周四 22:00)
+    - cron: '0 22 * * 4'
   workflow_dispatch:  # 允许手动触发
   push:
     branches: [ main ]
