修复VOD工作流依赖和模块导入问题
🔧 关键修复：
- 添加缺失的requirements.txt文件，包含所有必要依赖
- 修复GitHub Actions中pip缓存失败导致的依赖安装问题
- 改进依赖安装逻辑，提供fallback安装方案

🐛 调试增强：
- 添加详细的调试信息输出，包括目录结构、Python版本、已安装包
- 增强错误处理，显示完整的traceback信息
- 添加VOD模块导入验证步骤

📦 依赖管理：
- 从Pipfile提取核心依赖到requirements.txt
- 确保GitHub Actions能正确安装所有必要的Python包
- 添加configparser等缺失的依赖

🔍 问题诊断：
根据日志分析，主要问题是：
1. 缺少requirements.txt导致pip缓存失败
2. VOD更新步骤被跳过，没有执行实际的更新逻辑
3. 缺少详细的错误信息用于问题定位

现在工作流应该能够：
- 正确安装所有依赖
- 成功导入VOD模块
- 执行完整的点播源更新流程
- 提供详细的调试信息

--- a/.github/workflows/update-vod.yml
+++ b/.github/workflows/update-vod.yml
@@ -34,7 +34,11 @@ jobs:
     - name: 📦 Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt || pip install aiohttp tqdm requests configparser
+        if [ -f requirements.txt ]; then
+          pip install -r requirements.txt
+        else
+          pip install aiohttp tqdm requests configparser bs4 async-timeout flask opencc-python-reimplemented pillow m3u8 pytz
+        fi
     
     - name: 📁 Create VOD directories
       run: |
@@ -52,16 +56,38 @@ jobs:
         echo "🎬 开始OneTV-API点播源更新..."
         echo "⏰ 执行时间: $(date '+%Y-%m-%d %H:%M:%S')"
         echo "🔧 强制更新: ${FORCE_UPDATE:-false}"
-        
+        echo "📁 当前目录: $(pwd)"
+        echo "📂 目录内容:"
+        ls -la
+        echo "🔍 检查VOD模块:"
+        ls -la updates/vod/ || echo "VOD目录不存在"
+        echo "🐍 Python版本: $(python --version)"
+        echo "📦 已安装包:"
+        pip list | grep -E "(aiohttp|tqdm|requests)"
+
         python -c "
         import asyncio
         import sys
         import os
+        import traceback
         sys.path.append('.')
+
+        print('🔍 Python路径:', sys.path)
+        print('📁 当前工作目录:', os.getcwd())
+
+        try:
+            print('📥 尝试导入VOD模块...')
+            from updates.vod.request import update_vod_sources
+            print('✅ VOD模块导入成功!')
+        except Exception as e:
+            print(f'❌ VOD模块导入失败: {str(e)}')
+            print('📋 详细错误信息:')
+            traceback.print_exc()
+            exit(1)
 
         async def main():
             try:
-                from updates.vod.request import update_vod_sources
+                print('🚀 开始执行VOD更新...')
                 success = await update_vod_sources()
                 if success:
                     print('✅ 点播源更新成功!')
@@ -71,6 +97,8 @@ jobs:
                     exit(1)
             except Exception as e:
                 print(f'❌ 点播源更新异常: {str(e)}')
+                print('📋 详细错误信息:')
+                traceback.print_exc()
                 exit(1)
 
         if __name__ == '__main__':
