修复VOD工作流文件名和Python代码缩进问题
🔧 关键修复：
- 将所有中文文件名'影视'修改为英文'movie'，解决Supabase Storage不支持中文文件名的问题
- 修复GitHub Actions工作流中Python代码的缩进错误

📁 文件名修改：
- vod/config/vod_config.ini: onetv-api影视.json  onetv-api-movie.json
- updates/vod/processor.py: 输出文件名修改
- updates/vod/uploader.py: 上传路径和显示信息修改
- .github/workflows/update-vod.yml: 访问地址链接修改

🐛 修复问题：
1. Supabase Storage文件上传失败 (HTTP 400 - Invalid key)
   - 原因：中文文件名不被支持
   - 解决：统一使用英文文件名 onetv-api-movie.json

2. Python代码缩进错误 (IndentationError)
   - 原因：工作流中Python代码块缩进不正确
   - 解决：修正所有Python代码的缩进格式

现在VOD工作流应该能够：
✅ 正确生成英文文件名的JSON配置
✅ 成功上传文件到Supabase Storage
✅ 正确执行统计信息生成和显示

--- a/.github/workflows/update-vod.yml
+++ b/.github/workflows/update-vod.yml
@@ -119,24 +119,24 @@ jobs:
         if [ -f "vod/output/vod_statistics.json" ]; then
           echo "### 📊 更新统计" >> $GITHUB_STEP_SUMMARY
           python -c "
-          import json
-          try:
-              with open('vod/output/vod_statistics.json', 'r', encoding='utf-8') as f:
-                  stats = json.load(f)
-              summary = stats.get('summary', {})
-              categories = stats.get('categories', {})
+import json
+try:
+    with open('vod/output/vod_statistics.json', 'r', encoding='utf-8') as f:
+        stats = json.load(f)
+    summary = stats.get('summary', {})
+    categories = stats.get('categories', {})
 
-              print(f'- **配置源数量**: {summary.get(\"total_configured\", 0)}')
-              print(f'- **有效源数量**: {summary.get(\"valid_sources\", 0)}')
-              print(f'- **成功率**: {summary.get(\"success_rate\", \"0%\")}')
-              print(f'- **平均质量评分**: {summary.get(\"average_quality_score\", \"0\")}')
-              print(f'- **平均响应时间**: {summary.get(\"average_response_time\", \"0s\")}')
-              print('')
-              print('### 📂 分类统计')
-              for category, count in categories.items():
-                  print(f'- **{category}**: {count} 个源')
-          except Exception as e:
-              print(f'统计信息读取失败: {str(e)}')
+    print(f'- **配置源数量**: {summary.get(\"total_configured\", 0)}')
+    print(f'- **有效源数量**: {summary.get(\"valid_sources\", 0)}')
+    print(f'- **成功率**: {summary.get(\"success_rate\", \"0%\")}')
+    print(f'- **平均质量评分**: {summary.get(\"average_quality_score\", \"0\")}')
+    print(f'- **平均响应时间**: {summary.get(\"average_response_time\", \"0s\")}')
+    print('')
+    print('### 📂 分类统计')
+    for category, count in categories.items():
+        print(f'- **{category}**: {count} 个源')
+except Exception as e:
+    print(f'统计信息读取失败: {str(e)}')
           " >> $GITHUB_STEP_SUMMARY
         else
           echo "⚠️ 统计信息文件未生成" >> $GITHUB_STEP_SUMMARY
@@ -145,8 +145,8 @@ jobs:
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "### 🔗 访问地址" >> $GITHUB_STEP_SUMMARY
         if [ -n "${{ secrets.SUPABASE_URL }}" ]; then
-          echo "- **当前版本**: ${{ secrets.SUPABASE_URL }}/storage/v1/object/public/vod-sources/current/onetv-api影视.json" >> $GITHUB_STEP_SUMMARY
-          echo "- **历史版本**: ${{ secrets.SUPABASE_URL }}/storage/v1/object/public/vod-sources/archive/$(date '+%Y-%m-%d')/onetv-api影视.json" >> $GITHUB_STEP_SUMMARY
+          echo "- **当前版本**: ${{ secrets.SUPABASE_URL }}/storage/v1/object/public/vod-sources/current/onetv-api-movie.json" >> $GITHUB_STEP_SUMMARY
+          echo "- **历史版本**: ${{ secrets.SUPABASE_URL }}/storage/v1/object/public/vod-sources/archive/$(date '+%Y-%m-%d')/onetv-api-movie.json" >> $GITHUB_STEP_SUMMARY
           echo "- **统计信息**: ${{ secrets.SUPABASE_URL }}/storage/v1/object/public/vod-sources/logs/statistics-$(date '+%Y-%m-%d').json" >> $GITHUB_STEP_SUMMARY
         else
           echo "⚠️ Supabase配置未设置，无法生成访问地址" >> $GITHUB_STEP_SUMMARY
