--- a/vod/config/vod_config.ini
+++ b/vod/config/vod_config.ini
@@ -2,7 +2,7 @@
 # 点播源基础配置
 enable_vod = True
 vod_sources_file = vod/config/vod_sources.txt
-vod_output_file = vod/output/onetv-api影视.json
+vod_output_file = vod/output/onetv-api-movie.json
 
 # 验证配置
 request_timeout = 15
