修复VOD工作流YAML语法错误和Python导入问题
🔧 关键修复：
1. YAML语法错误修复：
   - 修复第122行的Python多行代码块语法问题
   - 将复杂的f-string改为简单的字符串拼接，避免引号冲突
   - 使用python3命令确保兼容性

2. Python代码优化：
   - 移除updates/vod/processor.py中未使用的List导入
   - 简化字符串格式化，避免嵌套引号问题
   - 确保所有Python代码块语法正确

🐛 解决的问题：
- GitHub Actions YAML语法验证失败
- Python代码块在shell中的引号冲突
- 多行字符串格式化问题

✅ 验证内容：
- YAML文件结构正确
- Python代码语法有效
- 字符串拼接逻辑正确
- 统计信息生成功能完整

现在VOD工作流应该能够通过GitHub Actions的语法验证并正常执行。

--- a/.github/workflows/update-vod.yml
+++ b/.github/workflows/update-vod.yml
@@ -118,26 +118,25 @@ jobs:
         
         if [ -f "vod/output/vod_statistics.json" ]; then
           echo "### 📊 更新统计" >> $GITHUB_STEP_SUMMARY
-          python -c "
+          python3 -c "
 import json
 try:
     with open('vod/output/vod_statistics.json', 'r', encoding='utf-8') as f:
         stats = json.load(f)
     summary = stats.get('summary', {})
     categories = stats.get('categories', {})
-
-    print(f'- **配置源数量**: {summary.get(\"total_configured\", 0)}')
-    print(f'- **有效源数量**: {summary.get(\"valid_sources\", 0)}')
-    print(f'- **成功率**: {summary.get(\"success_rate\", \"0%\")}')
-    print(f'- **平均质量评分**: {summary.get(\"average_quality_score\", \"0\")}')
-    print(f'- **平均响应时间**: {summary.get(\"average_response_time\", \"0s\")}')
+    print('- **配置源数量**: ' + str(summary.get('total_configured', 0)))
+    print('- **有效源数量**: ' + str(summary.get('valid_sources', 0)))
+    print('- **成功率**: ' + str(summary.get('success_rate', '0%')))
+    print('- **平均质量评分**: ' + str(summary.get('average_quality_score', '0')))
+    print('- **平均响应时间**: ' + str(summary.get('average_response_time', '0s')))
     print('')
     print('### 📂 分类统计')
     for category, count in categories.items():
-        print(f'- **{category}**: {count} 个源')
+        print('- **' + category + '**: ' + str(count) + ' 个源')
 except Exception as e:
-    print(f'统计信息读取失败: {str(e)}')
-          " >> $GITHUB_STEP_SUMMARY
+    print('统计信息读取失败: ' + str(e))
+" >> $GITHUB_STEP_SUMMARY
         else
           echo "⚠️ 统计信息文件未生成" >> $GITHUB_STEP_SUMMARY
         fi
