--- a/.github/workflows/update-vod.yml
+++ b/.github/workflows/update-vod.yml
@@ -116,30 +116,7 @@ jobs:
         echo "- **工作流**: 点播源专用更新流程" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         
-        if [ -f "vod/output/vod_statistics.json" ]; then
-          echo "### 📊 更新统计" >> $GITHUB_STEP_SUMMARY
-          python3 -c "
-import json
-try:
-    with open('vod/output/vod_statistics.json', 'r', encoding='utf-8') as f:
-        stats = json.load(f)
-    summary = stats.get('summary', {})
-    categories = stats.get('categories', {})
-    print('- **配置源数量**: ' + str(summary.get('total_configured', 0)))
-    print('- **有效源数量**: ' + str(summary.get('valid_sources', 0)))
-    print('- **成功率**: ' + str(summary.get('success_rate', '0%')))
-    print('- **平均质量评分**: ' + str(summary.get('average_quality_score', '0')))
-    print('- **平均响应时间**: ' + str(summary.get('average_response_time', '0s')))
-    print('')
-    print('### 📂 分类统计')
-    for category, count in categories.items():
-        print('- **' + category + '**: ' + str(count) + ' 个源')
-except Exception as e:
-    print('统计信息读取失败: ' + str(e))
-" >> $GITHUB_STEP_SUMMARY
-        else
-          echo "⚠️ 统计信息文件未生成" >> $GITHUB_STEP_SUMMARY
-        fi
+        python3 scripts/generate_vod_summary.py >> $GITHUB_STEP_SUMMARY
         
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "### 🔗 访问地址" >> $GITHUB_STEP_SUMMARY
