优化VOD上传逻辑，仅上传必要文件节约存储额度
🎯 核心优化：
- 仅上传 onetv-api-movie.json 文件到 Supabase 根目录
- 移除 archive、current、logs 文件夹的上传逻辑
- 大幅减少存储空间使用和API调用次数

📁 文件结构优化：
- 简化上传路径：vod-sources/onetv-api-movie.json
- 移除历史版本备份功能
- 移除统计信息日志上传

🔧 代码优化：
- 简化 uploader.py 上传逻辑
- 移除不必要的参数和导入
- 优化函数签名和错误处理
- 更新工作流访问地址显示

📂 目录结构：
- 添加 vod/output/.gitkeep 确保目录被Git跟踪
- onetv-api-movie.json 将在工作流运行时生成

💰 成本效益：
- 减少约67%的存储空间使用（3个文件夹1个文件）
- 减少约67%的API调用次数
- 保持核心功能完整性

现在VOD系统将更加高效和经济！

--- a/.github/workflows/update-vod.yml
+++ b/.github/workflows/update-vod.yml
@@ -121,9 +121,7 @@ jobs:
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "### 🔗 访问地址" >> $GITHUB_STEP_SUMMARY
         if [ -n "${{ secrets.SUPABASE_URL }}" ]; then
-          echo "- **当前版本**: ${{ secrets.SUPABASE_URL }}/storage/v1/object/public/vod-sources/current/onetv-api-movie.json" >> $GITHUB_STEP_SUMMARY
-          echo "- **历史版本**: ${{ secrets.SUPABASE_URL }}/storage/v1/object/public/vod-sources/archive/$(date '+%Y-%m-%d')/onetv-api-movie.json" >> $GITHUB_STEP_SUMMARY
-          echo "- **统计信息**: ${{ secrets.SUPABASE_URL }}/storage/v1/object/public/vod-sources/logs/statistics-$(date '+%Y-%m-%d').json" >> $GITHUB_STEP_SUMMARY
+          echo "- **VOD配置文件**: ${{ secrets.SUPABASE_URL }}/storage/v1/object/public/vod-sources/onetv-api-movie.json" >> $GITHUB_STEP_SUMMARY
         else
           echo "⚠️ Supabase配置未设置，无法生成访问地址" >> $GITHUB_STEP_SUMMARY
         fi
