🔧 修复VOD工作流权限问题
🐛 问题修复:
- 添加GitHub Actions写入权限 (contents: write)
- 解决403权限错误：remote: Write access to repository not granted
- 允许工作流推送生成的VOD文件到仓库

✅ 权限配置:
- contents: write - 允许推送代码到仓库
- actions: read - 允许读取Actions状态

📊 修复效果:
- VOD工作流现在可以成功提交生成的文件
- 解决了文件只上传到Supabase但不保存到GitHub的问题
- 确保双重存储机制正常工作

--- a/.github/workflows/update-vod.yml
+++ b/.github/workflows/update-vod.yml
@@ -18,7 +18,10 @@ env:
 jobs:
   update-vod-sources:
     runs-on: ubuntu-latest
-    
+    permissions:
+      contents: write  # 允许推送代码到仓库
+      actions: read    # 允许读取Actions
+
     steps:
     - name: 🚀 Checkout repository
       uses: actions/checkout@v4
