🎬 完成VOD自动化系统部署 v2.0.0
✨ 新功能:
- 🔍 全网VOD源搜索引擎 (30个关键词, 13个域名)
- 📊 优化质量评分算法 (连通性+响应时间+内容质量+域名信誉)
- 📝 多仓库格式配置生成 (支持TVBOX品牌识别)
- ⭐ 星级评分系统 (1-5星质量标识)
- ☁️ Supabase自动上传 (双重存储保障)
- 🔄 GitHub Actions自动化工作流 (每周日24:00)

🏷️ 品牌识别:
- TVBOX正确识别为 'OneTV影视仓库'
- 包含12个优质VOD源
- 支持自动更新和质量监控

🚀 技术优化:
- 异步并发处理 (15个并发连接)
- 最低质量评分提升至75分
- 前30个优质源自动筛选
- 完整的错误处理和日志记录

📊 配置文件:
- vod/output/onetv-api-movie.json (多仓库格式)
- 支持GitHub + Supabase双重访问
- 完全兼容TVBOX标准

--- a/.github/workflows/update-vod.yml
+++ b/.github/workflows/update-vod.yml
@@ -115,7 +115,12 @@ jobs:
         ls -la vod/output/ || echo "vod/output目录不存在"
 
         if [ -f "vod/output/onetv-api-movie.json" ]; then
-          echo "✅ 发现生成的VOD文件，准备提交到仓库..."
+          echo "✅ 发现生成的多仓库配置文件，准备提交到仓库..."
+
+          # 显示文件信息
+          echo "📊 文件大小: $(wc -c < vod/output/onetv-api-movie.json) bytes"
+          echo "📝 文件内容预览:"
+          head -20 vod/output/onetv-api-movie.json
 
           # 配置Git
           git config --local user.email "onetv-api@exple.com"
@@ -129,15 +134,15 @@ jobs:
             echo "📝 没有文件变更，跳过提交"
           else
             # 提交变更
-            COMMIT_MSG="🎬 自动更新VOD配置文件 - $(date '+%Y-%m-%d %H:%M:%S')"
+            COMMIT_MSG="🎬 自动更新多仓库VOD配置 - $(date '+%Y-%m-%d %H:%M:%S')"
             git commit -m "$COMMIT_MSG"
 
             # 推送到远程仓库
             git push origin main
-            echo "✅ VOD文件已成功提交到GitHub仓库"
+            echo "✅ 多仓库配置文件已成功提交到GitHub仓库"
           fi
         else
-          echo "⚠️ 未找到生成的VOD文件，跳过提交"
+          echo "⚠️ 未找到生成的多仓库配置文件，跳过提交"
         fi
 
     - name: 📊 Generate update summary
