--- a/vod/config/vod_config.ini
+++ b/vod/config/vod_config.ini
@@ -6,8 +6,8 @@ vod_output_file = vod/output/onetv-api-movie.json
 
 # 验证配置
 request_timeout = 15
-max_concurrent = 10
-min_quality_score = 70
+max_concurrent = 15
+min_quality_score = 75
 retry_times = 3
 
 # 更新配置
@@ -15,11 +15,13 @@ update_interval = 7
 enable_auto_upload = True
 backup_versions = 5
 
-# 质量评分权重
+# 质量评分权重 (优化后的评分标准)
 score_connectivity = 40
 score_response_time = 20
 score_content_quality = 25
 score_historical_stability = 15
+# 多仓库配置
+max_sources_output = 30
 
 [Supabase_VOD]
 # Supabase点播源配置
