🔧 修复VOD系统问题并优化配置 v2.0.1
🆕 新增功能:
- 创建白名单系统 (vod/config/vod_whitelist.txt)
- 支持优质源优先级保障机制
- 智能源合并和去重功能

🔧 修复问题:
- 修复生成配置缺少知名源的问题
- 优化源名称显示 (技术性用户友好)
- 完善饭太硬、肥猫等官方源配置

📝 配置优化:
- 更新主配置文件包含16个优质源
- 白名单源默认100分质量评分
- 保持OneTV影视仓库品牌识别

🎯 包含源列表:
- 讴歌多仓⭐⭐⭐⭐⭐
- 饭太硬官方/主线/备用⭐⭐⭐⭐⭐
- 肥猫官方/简化⭐⭐⭐⭐⭐
- 菜妮丝⭐⭐⭐⭐⭐
- 香雅情、太阳线路、南风线路等

✅ 测试状态:
- TVBOX正确识别为OneTV影视仓库
- 多仓库格式完全兼容
- 白名单与搜索源智能合并

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ reorder_categories.py
 vod/output/onetv-api-movie-V1.json
 vod/output/onetv-api-movie-V2 copy.json
 vod/output/onetv-api-movie.json.bak
+vod/output/onetv-api-movie (1).json
