更新VOD系统文件和配置

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ vod/output/onetv-api-movie-V1.json
 vod/output/onetv-api-movie-V2 copy.json
 vod/output/onetv-api-movie.json.bak
 vod/output/onetv-api-movie (1).json
+vod/output/onetv-api-movie (2).json
+vod/README_OPTIMIZATION.md
